# Aether-Studio-2

./: App.tsx  README.md  constants.tsx  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
components/: MixerTrack.tsx  SettingsModal.tsx  Waveform.tsx
migrated_prompt_history/: prompt_2026-01-23T02_10_53.715Z.json
services/: llmService.ts  settingsService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
